k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: threema-web
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: threema-web
  template:
    metadata:
      labels:
        app: threema-web
    spec:
      automountServiceAccountToken: false
      containers:
        - name: threema-web
          image: ghcr.io/nachtalb/threema-web:hate-driven-development
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 0
              memory: 16Mi
            limits:
              memory: 64Mi
          securityContext:
            runAsNonRoot: true
            runAsUser: 65534
            runAsGroup: 65534
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: [ALL]
          livenessProbe:
            httpGet: {path: /health, port: 8080}
            periodSeconds: 30
          readinessProbe:
            httpGet: {path: /health, port: 8080}
            periodSeconds: 10
          volumeMounts:
            - name: userconfig
              mountPath: /public/userconfig.overrides.js
              subPath: userconfig.overrides.js
              readOnly: true
      volumes:
        - name: userconfig
          configMap:
            name: threema-web-config
