k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: threema-web
spec:
  selector:
    app: threema-web
  ports:
    - port: 80
      targetPort: 8080
