k8s/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: threema-web
spec:
  parentRefs:
    - name: kgw
      namespace: kgateway-system
  hostnames:
    - threema.naa.gg
    - t.naa.gg
    - threema.nachtalb.ch
  rules:
    - backendRefs:
        - name: threema-web
          port: 80
